--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -1,3 +1,19 @@
+.oval-label {
+  display: inline-block;
+  background-color: white;
+  color: #333;
+  border-radius: 8px;
+  padding: 2px 4px;
+  border: 1px solid #3c3c3c;
+}
+
+.label-text {
+  display: block;
+  text-align: center;
+  font-size: 0.6vw;
+  font-weight: bold;
+}
+
 @media screen and (max-width: 700px) {
     h2 {
         font-size: 4.5vw;
