--- a/src/assets/global.css
+++ b/src/assets/global.css
@@ -14,6 +14,12 @@
   font-weight: bold;
 }
 
+.name-hover:hover {
+  color: #aeac8d; 
+  transition: background-color 0.3s; 
+  cursor: pointer;
+}
+
 @media screen and (max-width: 700px) {
     h2 {
         font-size: 4.5vw;
